--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,6 +22,7 @@
         </div>
     </div>
 </header>
+
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
@@ -39,6 +40,7 @@
     </div>
 </div>
 <hr />
+
 <footer>
     <div class="container">
         <div class="row">
@@ -65,3 +67,4 @@
             </div>
         </div>
     </div>
+</footer>
