--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,54 +1,61 @@
-
-<% if @user.admin_flg == false %>
-  <%= render 'users/shared/users_sidebar' %>
-<% else %>
-  <%= render 'users/shared/admin_sidebar' %>
-<% end %>
-<%= render 'users/shared/header' %>
-<div id="layoutSidenav_content">
-  <div class="container-fluid">
-    <h1 class="mt-4">記事作成画面</h1>
-      <% if notice %>
-        <div class="sucsess-flash-message"><%= flash[:notice]%>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+        <%= link_to "Post CMS", root_path, class: "navbar-brand" %>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><%= link_to "アカウントをお持ちの方はこちら", new_user_session_path, class: "nav-link" %></li>
+            </ul>
         </div>
-      <% elsif alert %>
-        <div class="error-flash-message"><%= flash[:alert]%>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-        </div>
-      <% end %>
-  <div class="card mb-4">
-  <div class="card-header">記事情報</div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>タイトル</th>
-              <th>第一キーワード</th>
-              <th>第二キーワード</th>
-              <th>第三キーワード</th>
-              <th>第四キーワード</th>
-              <th>文字数</th>
-            </tr>
-          </thead>
-          <tbody>
-              <tr>
-                <td><%= @post.order.title %></td>
-                <td><%= @post.order.first_keyword %></td>
-                <td><%= @post.order.second_keyword %></td>
-                <td><%= @post.order.third_keyword %></td>
-                <td><%= @post.order.fourth_keyword %></td>
-                <td><%= @post.order.words %></td>
-              </tr>
-          </tbody>
-        </table>
-      </div>
-      </div>
-      </div>
-  <div class="card mb-4">
-  <div class="card-header">記事の中身</div>
-    <div class="card-body">
-      <%= @post.content %>
     </div>
-  </div>
+</nav>
+
+<header class="masthead">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="site-heading">
+                    <h1>Post CMS</h1>
+                    <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+        <%= @post.content%>
+        </div>
+        </div>
+    </div>
+</div>
+<hr />
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/jyoryu_0105">
+                            <span class="fa-stack fa-lg">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/jyoryu-0105">
+                            <span class="fa-stack fa-lg">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+                <p class="copyright text-muted">Copyright &copy; Post CMS</p>
+            </div>
+        </div>
+    </div>
+</footer>
