--- a/app/views/users/shared/_header.html.erb
+++ b/app/views/users/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <%= link_to 'Post CMS', users_root_path , class: "navbar-brand" %>
       <ul class="navbar-nav ml-auto ml-md-0">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+          <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= @user.nickname %><i class="fas fa-user fa-fw"></i></a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
           <a class="dropdown-item" href="#">設定</a>
         <div class="dropdown-divider"></div>
