--- a/app/views/users/shared/_users_sidebar.html.erb
+++ b/app/views/users/shared/_users_sidebar.html.erb
@@ -4,7 +4,7 @@
       <div class="sb-sidenav-menu">
         <div class="nav">
           <div class="sb-sidenav-menu-heading">TOP</div>
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="/users">
               <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                 トップページ
             </a>
@@ -43,20 +43,15 @@
               <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
             </a>
             <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
-              <nav class="sb-sidenav-menu-nested nav">
-                <a class="nav-link" href="401.html">401 Page</a>
-                <a class="nav-link" href="404.html">404 Page</a>
-                <a class="nav-link" href="500.html">500 Page</a>
-              </nav>
             </div>
               </nav>
           </div>
           <div class="sb-sidenav-menu-heading">管理</div>
-            <a class="nav-link" href="charts.html">
+            <a class="nav-link" href="#">
               <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                 設定
             </a>
-            <a class="nav-link" href="tables.html">
+            <a class="nav-link" href="#">
               <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                 マニュアル
             </a>
